# skillberry-agent-praxis-poc

./: .gitignore  README.md
docs/: tau2-praxis-run.md
pipeline/: emulate_client.py  skillberry-agent-proxy.yaml.tmpl  skillberry.yaml
scripts/: build-praxis.sh  start.sh
skills/hello-world/: SKILL.md
skills/hello-world/scripts/: echo.py  greet.py
skills/praxis-demo-hello-world/: SKILL.md
skills/praxis-demo-hello-world/scripts/: praxis_demo_echo.py  praxis_demo_greet.py
src/context_extractor/: filter.rs
src/skill_resolver/: filter.rs
src/vmcp_manager/: filter.rs
worker/: README.md  __init__.py  agentic_graph.py  llm_client.py  main.py  pyproject.toml
